--- a/Template/Home/siteMap.html
+++ b/Template/Home/siteMap.html
@@ -102,6 +102,7 @@
                         <li><a href="{% url 'AboutUs' %}#history-technowin">History Of Technowin</a></li>
                         <li><a href="{% url 'AboutUs' %}#testimonials">Meet The Team Section</a></li>
                         <li><a href="{% url 'AboutUs' %}#mvo-video-background">Vision, Mission Section</a></li>
+                        <li><a href="{% url 'AboutUs' %}#blog-section">Latest Blogs</a></li>
                     </ul>
                 </li>
                 <li><a href="{% url 'Software' %}">Software</a>
