--- a/Template/Home/siteMap.html
+++ b/Template/Home/siteMap.html
@@ -102,7 +102,7 @@
                         <li><a href="{% url 'AboutUs' %}#history-technowin">History Of Technowin</a></li>
                         <li><a href="{% url 'AboutUs' %}#testimonials">Meet The Team Section</a></li>
                         <li><a href="{% url 'AboutUs' %}#mvo-video-background">Vision, Mission Section</a></li>
-                        <li><a href="{% url 'AboutUs' %}#blog-section">Latest Blogs</a></li>
+                        {% comment %} <li><a href="{% url 'AboutUs' %}#blog-section">Latest Blogs</a></li> {% endcomment %}
                     </ul>
                 </li>
                 <li><a href="{% url 'Software' %}">Software</a>
@@ -161,6 +161,12 @@
                         <li><a href="{% url 'ContactUs' %}#feedback-section">Customer Feedback</a></li>
                         <li><a href="{% url 'ContactUs' %}#technoWinContactSection">Get In Touch Form</a></li>
                         <li><a href="{% url 'ContactUs' %}#background-video-section">Our Gallery</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="{% url 'Blogs' %}">Blogs</a>
+                    <ul>
+                        <li><a href="{% url 'Blogs' %}#blog-1">Creation of a Workflow Management System: A Case Study</a></li>
                     </ul>
                 </li>
             </ul>
