--- a/static/css/blogs.css
+++ b/static/css/blogs.css
@@ -12,7 +12,7 @@
 }
 
 /* Blog Section Title Animation */
-.blog-post h2 {
+.heading-blog h2 {
     font-size: 32px;
     color: white;
     text-align: center;
