--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -36,45 +36,45 @@
         <div id="carouselExampleControlsPC" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="{% static 'images/1.png' %}" alt="First slide">
+                    <img class="d-block w-100" src="{% static 'slider/1.png' %}" alt="First slide">
                     <div class="overlay-text animate__animated animate__backInLeft">We Provide</div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/2.png' %}" alt="Second slide">
+                    <img class="d-block w-100" src="{% static 'slider/2.png' %}" alt="Second slide">
                     <div class="overlay-text-slide2 animate__animated animate__bounce">
                         Web Development with features powered by AI
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/3.png' %}" alt="Second slide">
+                    <img class="d-block w-100" src="{% static 'slider/3.png' %}" alt="Second slide">
                     <div class="overlay-text-slide5 animate__animated animate__bounce">
                         E- Office-DMS<br>Workflow Management
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/4.png' %}" alt="Third slide">
+                    <img class="d-block w-100" src="{% static 'slider/4.png' %}" alt="Third slide">
                     <div class="overlay-text-slide4 animate__animated animate__rubberBand">
                         Cloud Computing
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/5.png' %}" alt="Fourth slide">
+                    <img class="d-block w-100" src="{% static 'slider/5.png' %}" alt="Fourth slide">
                     <div class="overlay-text animate__animated animate__fadeInDown">App Development</div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/6.png' %}" alt="Fifth slide">
+                    <img class="d-block w-100" src="{% static 'slider/6.png' %}" alt="Fifth slide">
                     <div class="overlay-text-slide3 animate__animated animate__fadeInUp">
                         Hardware
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/7.png' %}" alt="Sixth slide">
+                    <img class="d-block w-100" src="{% static 'slider/7.png' %}" alt="Sixth slide">
                     <div class="overlay-text-slide3 animate__animated animate__lightSpeedInRight">
                         ManPower
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/8.png' %}" alt="Second slide">
+                    <img class="d-block w-100" src="{% static 'slider/8.png' %}" alt="Second slide">
                     <div class="overlay-text-slide6 animate__animated animate__bounce">
                         AI Based <br> Solutions
                     </div>
@@ -95,24 +95,24 @@
         <div id="carouselExampleControlsMobile" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="{% static 'images/M1.png' %}" alt="First slide">
+                    <img class="d-block w-100" src="{% static 'slider/M1.png' %}" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/M2.png' %}" alt="Second slide">
+                    <img class="d-block w-100" src="{% static 'slider/M2.png' %}" alt="Second slide">
                     
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/M3.png' %}" alt="Second slide">
+                    <img class="d-block w-100" src="{% static 'slider/M3.png' %}" alt="Second slide">
                     
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/M4.png' %}" alt="Third slide">
+                    <img class="d-block w-100" src="{% static 'slider/M4.png' %}" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/M5.png' %}" alt="Fourth slide">
+                    <img class="d-block w-100" src="{% static 'slider/M5.png' %}" alt="Fourth slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static 'images/M6.png' %}" alt="Fourth slide">
+                    <img class="d-block w-100" src="{% static 'slider/M6.png' %}" alt="Fourth slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControlsMobile" role="button" data-slide="prev">
