--- a/Template/Home/siteMap.html
+++ b/Template/Home/siteMap.html
@@ -154,6 +154,18 @@
                         <li><a href="{% url 'Services' %}#faq-section">FAQ</a></li>
                     </ul>
                 </li>
+
+                <li><a href="{% url 'Product' %}">Contact Us</a>
+                    <ul>
+                        <li><a href="{% url 'Product' %}#product-1">Attendance Leave and Payroll</a></li>
+                        <li><a href="{% url 'Product' %}#product-2">Employee Self Service Website</a></li>
+                        <li><a href="{% url 'Product' %}#product-3">Student Attendance Capture for College</a></li>
+                        <li><a href="{% url 'Product' %}#product-4">Chatbot Desktop App</a></li>
+                        <li><a href="{% url 'Product' %}#product-5">Employee Self Service App</a></li>
+                        <li><a href="{% url 'Product' %}#product-6">Document Managment System (DMS)</a></li>
+                    </ul>
+                </li>
+
                 <li><a href="{% url 'ContactUs' %}">Contact Us</a>
                     <ul>
                         <li><a href="{% url 'ContactUs' %}#social-media-section">Contact Us Slider</a></li>
