--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -47,7 +47,8 @@
     </div>
         
     <!-- Social Media Section -->
-    <section>
+     <!-- Social Media Section -->
+     <section>
         <div class="social-links" id="socialIcons">
             <a href="https://www.facebook.com/share/rDF8hKbxWMA2MWjF/" class="social-icon facebook" target="_blank">
                 <img src="{% static 'social_media/facebook1.png' %}" alt="Facebook">
@@ -64,16 +65,21 @@
             <a href="tel:+917738019120" class="social-icon whatsapp" target="_blank">
                 <img src="{% static 'social_media/whatsapp.png' %}" alt="Whatsapp">
             </a>
+            <!-- YouTube Channel -->
+            <a href="https://youtube.com/@technowini.t.infrapvt?si=rPDCwFVHXipyOETU" class="social-icon youtube" target="_blank">
+                <img src="{% static 'social_media/youtube.png' %}" alt="YouTube">
+            </a>
             <!-- Brochure Download -->
             <a href="{% static 'images/technowin.pdf' %}" class="social-icon brochure" download>
                 <img src="{% static 'images/download.png' %}" alt="Download Brochure">
                 <!-- Tooltip text that will be displayed on hover -->
                 <span class="tooltip">Download Brochure</span>
             </a>
+            
             <!-- Chatbot Icon -->
-        
         </div>
     </section>
+    
 
     <section class="feedback-section" id="feedback-section">
         <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color: black; text-shadow: 2px 2px 8px rgba(209, 12, 12, 0.4); font-family: 'Arial', sans-serif; letter-spacing: 2px;">Customer Feedback</h2>
