--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -381,16 +381,21 @@
             <a href="tel:+917738019120" class="social-icon whatsapp" target="_blank">
                 <img src="{% static 'social_media/whatsapp.png' %}" alt="Whatsapp">
             </a>
+            <!-- YouTube Channel -->
+            <a href="https://youtube.com/@technowini.t.infrapvt?si=rPDCwFVHXipyOETU" class="social-icon youtube" target="_blank">
+                <img src="{% static 'social_media/youtube.png' %}" alt="YouTube">
+            </a>
             <!-- Brochure Download -->
             <a href="{% static 'images/technowin.pdf' %}" class="social-icon brochure" download>
                 <img src="{% static 'images/download.png' %}" alt="Download Brochure">
                 <!-- Tooltip text that will be displayed on hover -->
                 <span class="tooltip">Download Brochure</span>
             </a>
+            
             <!-- Chatbot Icon -->
-        
         </div>
     </section>
+    
     
     <!-- project video section -->
 
