--- a/Template/Home/siteMap.html
+++ b/Template/Home/siteMap.html
@@ -155,7 +155,7 @@
                     </ul>
                 </li>
 
-                <li><a href="{% url 'Product' %}">Contact Us</a>
+                <li><a href="{% url 'Product' %}">Product</a>
                     <ul>
                         <li><a href="{% url 'Product' %}#product-1">Attendance Leave and Payroll</a></li>
                         <li><a href="{% url 'Product' %}#product-2">Employee Self Service Website</a></li>
