--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -1166,7 +1166,7 @@ font-weight: bold;
 
 /* Hover effect to enlarge and add color */
 .social-icon:hover {
-    background-color: rgba(0, 0, 0, 0.7);
+    /* background-color: rgba(0, 0, 0, 0.7); */
     transform: scale(1.1);
 }
 
@@ -1186,14 +1186,14 @@ font-weight: bold;
     }
 }
 
- /* Hidden text initially */
- .social-icon .tooltip {
+/* Hidden text initially */
+.social-icon .tooltip {
     visibility: hidden;
     position: absolute;
     bottom: 50%;
     right: 10%;
     transform: translateX(-50%);
-    background-color: rgb(56, 55, 55);
+    background-color: rgb(39, 39, 39);
     color: white;
     padding: 2px;
     border-radius: 4px;
@@ -1216,25 +1216,36 @@ font-weight: bold;
 
 /* Optional: You can add specific hover effects for individual icons */
 .social-icon.facebook:hover {
-    background-color:rgb(162, 179, 216); /* Facebook color */
+    background-color:rgb(39, 39, 39); /* Facebook color */
 }
 
 .social-icon.twitter:hover {
-    background-color: #1DA1F2; /* Twitter color */
+    background-color: rgb(39, 39, 39); /* Twitter color */
 }
 
 .social-icon.linkedin:hover {
-    background-color: #0077b5; /* LinkedIn color */
+    background-color: rgb(39, 39, 39); /* LinkedIn color */
 }
 
 .social-icon.instagram:hover {
-    background-color: #E4405F; /* Instagram color */
+    background-color: rgb(39, 39, 39); /* Instagram color */
 }
 
 /* Add WhatsApp hover effect */
 .social-icon.whatsapp:hover {
-    background-color: #25D366; /* WhatsApp green color */
+    background-color:rgb(39, 39, 39); /* WhatsApp green color */
 }
+
+/* Add WhatsApp hover effect */
+.ssocial-icon.brochure:hover {
+    background-color:rgb(39, 39, 39); /* WhatsApp green color */
+}
+
+/* Add YouTube hover effect */
+.social-icon.youtube:hover {
+    background-color: rgb(39, 39, 39); /* YouTube red color */
+}
+
 
 
 /* Styling for the question section */
