--- a/Template/Home/product.html
+++ b/Template/Home/product.html
@@ -45,10 +45,7 @@
         <div class="project-card" id="product-1">
           <h2 class="project-title">Attendance Leave and Payroll</h2>
           <div class="project-video">
-            <video controls>
-              <source src="{% static 'product/payroll_product.mp4' %}" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <iframe width="500" height="350" src="https://www.youtube.com/embed/rL5B9v2VgBM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="project-description">
            
@@ -61,10 +58,7 @@
         <div class="project-card" id="product-2">
           <h2 class="project-title">Employee Self Service Website</h2>
           <div class="project-video">
-            <video controls>
-              <source src="{% static 'product/ess_product.mp4' %}" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <iframe width="500" height="350" src="https://www.youtube.com/embed/iptIxxT9n9g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="project-description">
       
@@ -77,10 +71,8 @@
         <div class="project-card" id="product-3">
             <h2 class="project-title">Student Attendance Capture for College</h2>
             <div class="project-video">
-              <video controls>
-                <source src="{% static 'product/student_attendance_capture.mp4' %}" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+              <iframe width="500" height="350" src="https://www.youtube.com/embed/poX_6g2R5b0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
             </div>
             <div class="project-description">
             
@@ -93,10 +85,7 @@
           <div class="project-card" id="product-4">
             <h2 class="project-title">Chatbot Desktop App</h2>
             <div class="project-video">
-              <video controls>
-                <source src="{% static 'product/chatbot_product.mp4' %}" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+              <iframe width="500" height="350" src="https://www.youtube.com/embed/ZC7OXqox8jQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="project-description">
              
@@ -109,10 +98,7 @@
           <div class="project-card" id="product-5">
             <h2 class="project-title">Employee Self Service App</h2>
             <div class="project-video">
-              <video controls>
-                <source src="{% static 'product/ess_app_product.mp4' %}" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+              <iframe width="500" height="350" src="https://www.youtube.com/embed/YB2qNrdBu5g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="project-description">
              
@@ -125,10 +111,7 @@
           <div class="project-card" id="product-6">
             <h2 class="project-title">Document Managment System (DMS)</h2>
             <div class="project-video">
-              <video controls>
-                <source src="{% static 'product/dms_product.mp4' %}" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+              <iframe width="500" height="350" src="https://www.youtube.com/embed/-HMlJQfmGQA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="project-description">
              
